# RxDx

./: .env  .env.development  .env.production  .env.staging  AGE_SETUP_COMPLETE.md  DEPLOYMENT.md  INFRASTRUCTURE.md  LOGGING_GUIDE.md  QUICKSTART.md  README.md  ROADMAP.md  RUNTIME_FIXES.md  SEED_DATA.md  TASK_1.4_COMPLETION.md  TEMPLATE_LOADING_FIX.md  check_risks.py  diagnose_risks_ui.md  docker-compose.prod.yml  docker-compose.yml  test_graph.sh  test_history_direct.sh  test_pages.sh  test_risks_api.sh  test_version_update.sh
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test_production_logging.py  test_schedule_request.py  test_templates.py  verify_skills_needed.py
backend/.github/: pyproject.toml
backend/.github/workflows/: workitem-schemas.yml
backend/.hypothesis/constants/: 007d3e8867117863  034c7f9f18c58f9f  04531798d2cf522e  05d094deb3de1fed  06cefe6912bd04b0  0aa495cbf9fb2207  0db37147af458e12  0f4479a8b809cb75  0f6ac85dd47db686  1bde0104bbd7835d  1d1cfcc4a14c5605  1dc9bd1d35556d12  1ff576182a571e6b  24faebc3e1ffcb5f  257e3d6d645acd81  25866cd46b3fba1d  26a0b76ad40f5702  2bce5c516c51ac09  2bf4594cfb49c513  2c03e35f116a8085  2e7596fd30e02ab2  2fc6a197d30e543d  32b0cb943011e0d1  3419a8a28919cf16  362a21c750fe129b  365df474c47d06ff  3c8f052cf235ca76  43e913facbd60b3c  4559e5a7c3258357  4b99024670f0d20f  4c408e6b9f988727  4d0cede833d21213  4de031f75ff34657  554ef9df6c003fd3  555bd1a226d8b337  58c17d85b1d610a0  61d171733668f63d  62eadfea71be0b64  66441bed7b8b9d65  66779af320af8839  (+57 more)
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: __init__.py  graph.py  init_schema.py  migrations.py  session.py
backend/app/middleware/: __init__.py  logging.py
backend/app/models/: __init__.py  audit.py  signature.py  user.py  version_history.py
backend/app/schemas/: __init__.py  audit.py  auth.py  backlog.py  company.py  department.py  document.py  graph.py  llm.py  milestone.py  phase.py  psp.py  resource.py  risk.py  schedule.py  signature.py  sprint.py  template.py  test.py  time_entry.py  user.py  worked.py  workitem.py  workpackage.py
backend/app/services/: README_RequirementDependencyTracking.md  README_RequirementService.md  __init__.py  audit_service.py  auth_service.py  backlog_service.py  company_service.py  critical_path.py  department_service.py  document_service.py  email_service.py  llm_service.py  milestone_service.py  phase_service.py  (+16 more)
backend/db/: README.md
backend/migrations/: add_scheduling_properties.py
backend/scripts/: migrate_departments_add_company.py  seed_data.py  template_cli.py  test_signature_service.py  test_signatures.py  test_workitem_schemas.py
backend/templates/: MIGRATION.md  README.md  default.yaml  gantt-chart-demo-full.yaml  medical-device.yaml  minimal.yaml  schema.json  software-only.yaml
backend/tests/: __init__.py  conftest.py  test_audit_endpoints.py  test_audit_model.py  test_audit_properties.py  test_audit_service.py  test_auth_endpoints.py  test_auth_properties.py  test_auth_service.py  test_backlog_endpoints.py  test_backlog_schemas.py  test_backlog_service.py  test_before_relationships.py  test_company_endpoints.py  test_company_properties.py  test_company_schemas.py  test_company_service.py  test_critical_path.py  test_critical_path_properties.py  test_date_utils.py  test_date_utils_properties.py  test_department_endpoints.py  test_department_properties.py  test_department_schemas.py  test_department_service.py  test_document_endpoints.py  test_document_service.py  test_duration_properties.py  test_duration_utils.py  test_email_endpoints.py  test_email_properties.py  test_email_service.py  test_error_logging.py  test_error_logging_properties.py  test_gantt_endpoint.py  test_gantt_properties.py  test_gantt_utils.py  test_graph_endpoints.py  test_graph_referential_integrity_properties.py  test_graph_search_properties.py  (+77 more)
(+793 files in other folders)
